k3s-install/roles/_certificate-authority/files/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx
        ports:
        - name: web
          containerPort: 80
