k3s-install/roles/_certificate-authority/files/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx-test
  labels:
    app: nginx-app
spec:
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-app
