k3s-install/roles/_certificate-authority/files/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: nginx-redirecttohttps@kubernetescrd
spec:
  rules:
  - host: "nginx.clcreative.home"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc 
            port:
              number: 80 
  tls:
  - hosts:
    - nginx.clcreative.home
    secretName: nginx-tls-secret
